--- a/Reg_App/templates/partials/navbar.hbs
+++ b/Reg_App/templates/partials/navbar.hbs
@@ -1,7 +1,7 @@
 <nav id="menu">
   <div class="menu-item">
     <div class="menu-text">
-      <a href="/index">Home</a>
+      <a href="/">Home</a>
     </div>
   </div>
   <div class="menu-item">
