--- a/Spin Wheel/client/src/App.css
+++ b/Spin Wheel/client/src/App.css
@@ -123,6 +123,7 @@
 img.zeal-wheel {
   position: absolute;
   z-index: 20;
+  border-radius: 100px;
   transition: all 0.3s ease-in-out 0s;
   width: 70px;
   height: 70px;
